# tdl-desktop

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  build.bat  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  run.bat  vite.config.ts
.github/workflows/: pr-ci.yml
docs/: tdl-desktop-usage.md
helper/tdl-helper/: go.mod  go.sum  main.go
scripts/: build-helper.mjs  collect-release.mjs  fetch-tdl.mjs
src/: App.tsx  appTypes.ts  appUtils.ts  i18n.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: cached_chat_media_preview.toml  cancel_download.toml  cancel_login.toml  check_desktop_update.toml  check_login_status.toml  clear_chat_cache.toml  clear_history.toml  collect_logs.toml  download_from_chat.toml  export_chat_messages.toml  get_diagnostics.toml  list_chats.toml  logout.toml  open_directory.toml  pick_directory.toml  pick_log_directory.toml  preview_chat_media.toml  preview_download_command.toml  preview_link.toml  refresh_tdl_info.toml  start_download.toml  start_login.toml  update_tdl.toml
src-tauri/src/: chat.rs  commands.rs  diagnostics.rs  download.rs  lib.rs  login.rs  main.rs  preview.rs  redaction.rs  state.rs  tdl.rs  tdl_config.rs  tg_helper.rs  tg_lite.rs  types.rs  util.rs
src/components/: DocumentationWorkspace.tsx  FileProgressList.tsx  HistoryItem.tsx  LoginPanel.tsx  MediaModal.tsx  Metric.tsx  SettingsWorkspace.tsx  TelegramWorkspace.tsx  Toggle.tsx
(+1 files in other folders)
